<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- The main content view where fragments are loaded -->
        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.NavigationView
            android:id="@+id/nvView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.design.widget.NavigationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="?attr/colorPrimaryDark"
                        android:padding="16dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark"
                        android:orientation="vertical"
                        android:gravity="bottom">

                        <ImageView
                            android:id="@+id/nav_header_profile_picture"
                            android:layout_weight="4"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:src="@drawable/com_facebook_button_icon"/>

                        <TextView
                            android:id="@+id/nav_header_profile_name"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="Header"
                            android:textColor="@android:color/white"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                    </LinearLayout>
                </android.support.design.widget.NavigationView>
                <android.support.design.widget.NavigationView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="bottom">
                        <TextView
                            android:id="@+id/nav_first_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:padding="10dp"
                            android:clickable="true"
                            android:text="1"/>
                        <TextView
                            android:id="@+id/nav_second_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:padding="10dp"
                            android:gravity="center"
                            android:clickable="true"
                            android:text="2"/>
                    </LinearLayout>
                </android.support.design.widget.NavigationView>
                <android.support.design.widget.NavigationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:clickable="true"
                        android:orientation="vertical"
                        android:background="@color/amber_50">
                        <TextView
                            android:id="@+id/footer_item_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/navigation_settings_sub_title"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_400"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/activity_main_navigation_view_is_reverse_text"
                                android:layout_width="0dp"
                                android:layout_weight="3"
                                android:layout_height="match_parent"
                                android:gravity="left|center"
                                android:text="@string/navigation_settings_reverse_text"
                                android:layout_marginLeft="2dp"
                                android:textSize="16sp"
                                />

                            <Switch
                                android:id="@+id/activity_main_navigation_view_is_reverse_switch"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp">
                            <TextView
                                android:id="@+id/activity_main_navigation_view_notification_on_off_text"
                                android:layout_width="0dp"
                                android:layout_weight="3"
                                android:gravity="left|center"
                                android:layout_height="match_parent"
                                android:text="@string/navigation_settings_notification_on_off_text"
                                android:layout_marginLeft="2dp"
                                android:textSize="16sp"/>
                            <Switch
                                android:id="@+id/activity_main_navigation_view_notification_switch"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:layout_alignBottom="@id/activity_main_navigation_view_notification_on_off_text"
                                android:layout_alignParentRight="true"
                                android:layout_toRightOf="@id/activity_main_navigation_view_notification_on_off_text"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp">
                            <TextView
                                android:id="@+id/activity_main_navigation_view_notification_number_text"
                                android:layout_width="0dp"
                                android:layout_weight="5"
                                android:layout_height="match_parent"
                                android:gravity="left|center"
                                android:layout_marginLeft="2dp"
                                android:text="@string/navigation_settings_number_of_notification_text"
                                android:textSize="16sp"/>
                            <Button
                                android:id="@+id/activity_main_navigation_view_number_of_notification_button"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:layout_marginRight="2dp"
                                android:text="10"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_margin="2dp">
                            <Button
                                android:id="@+id/activity_main_navigation_view_logout_button"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:text="@string/navigation_logout_button_text"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.design.widget.NavigationView>
            </LinearLayout>

        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>



